Fix vertical main component overflow bug: body 100dvh + main component 100dvh

--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -62,7 +62,7 @@
 body {
   margin: 0;
   padding: 0;
-  min-height: 100vh;
+  min-height: 100dvh;
   color: var(--color-text);
   background: var(--color-background);
   transition:
