--- a/src/components/Main_component/Main_component.css
+++ b/src/components/Main_component/Main_component.css
@@ -1,7 +1,7 @@
 .mainphone {
   position: relative;
   width: 100vw;
-  height: 100vh;
+  height: 100dvh;
   padding-top: 70px;
   overflow: auto;
 }
